[gd_scene load_steps=12 format=2]

[ext_resource path="res://screens/tree-village/images/mushrooms.png" type="Texture" id=1]
[ext_resource path="res://screens/tree-village/assets/ball-house/ballhouse.png" type="Texture" id=2]
[ext_resource path="res://screens/tree-village/images/bushes.png" type="Texture" id=3]
[ext_resource path="res://screens/tree-village/images/background.png" type="Texture" id=4]
[ext_resource path="res://screens/tree-village/images/tree.png" type="Texture" id=5]
[ext_resource path="res://screens/game/title/adventure.tscn" type="PackedScene" id=6]
[ext_resource path="res://screens/game/title.gd" type="Script" id=7]
[ext_resource path="res://screens/game/title/little.tscn" type="PackedScene" id=8]

[sub_resource type="TileSet" id=1]
0/name = "background.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 96 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("little:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.3, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2.51984, 146.151 ), Vector2( 0.629974, 95.7541 ), Vector2( 3.03388e-05, 108.353 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "New Anim"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("adventure:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -38.0976, 7.937 ), Vector2( -27.7795, 278.589 ), Vector2( -29.3669, 216.68 ), Vector2( -18.2551, 269.064 ) ]
}

[node name="Control" type="Node2D"]
position = Vector2( 0, 1 )
script = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 96, 96 )
format = 1
tile_data = PoolIntArray( 65533, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="ballhouse" type="Sprite" parent="."]
position = Vector2( 160.113, 49.4255 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="tree2" type="Sprite" parent="."]
position = Vector2( 308.947, -0.630981 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="tree" type="Sprite" parent="."]
position = Vector2( 43.9816, 66.7784 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="bushes" type="Sprite" parent="."]
position = Vector2( 244.875, 46.0884 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="bushes2" type="Sprite" parent="."]
position = Vector2( 82.692, 83.4639 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="mushrooms" type="Sprite" parent="."]
position = Vector2( 354.999, 33.4074 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="mushrooms2" type="Sprite" parent="."]
position = Vector2( 356.334, 147.536 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.5
autostart = true

[node name="AnimationPlayerLittle" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 2 )

[node name="little" parent="." instance=ExtResource( 8 )]
position = Vector2( 3.03388e-05, 108.353 )
rotation = 0.185005

[node name="adventure" parent="." instance=ExtResource( 6 )]
position = Vector2( -29.3669, 216.68 )

[node name="AnimationPlayerAdventure" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
